-Solved comments -Added code for sharing credentials on whatsapp

--- a/app/res/layout/item_personal_id_credential.xml
+++ b/app/res/layout/item_personal_id_credential.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="@color/personal_id_item_bg"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:layout_width="match_parent"
+    app:cardBackgroundColor="@color/personal_id_item_bg"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,7 +55,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:layout_width="0dp"
-            android:text="Issuing App Name"
+            tools:text="Issuing App Name"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +81,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:layout_width="0dp"
-            android:text="Issue Date"
+            tools:text="Issue Date"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +107,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:layout_width="0dp"
-            android:text="User Activity Level"
+            tools:text="User Activity Level"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
