--- a/app/res/layout/activity_personal_id_credential.xml
+++ b/app/res/layout/activity_personal_id_credential.xml
@@ -9,7 +9,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="none"
