--- a/app/res/menu/menu_work_history.xml
+++ b/app/res/menu/menu_work_history.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/cloud_sync"
         android:title="@string/cloud_sync"
+        android:contentDescription="@string/cloud_sync"
         android:icon="@drawable/ic_cloud_sync"
         app:showAsAction="always"/>
 </menu>
