--- a/app/res/layout/item_chat_right_view.xml
+++ b/app/res/layout/item_chat_right_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="end">
 
     <RelativeLayout
@@ -36,7 +37,7 @@
                 android:id="@+id/tvChatMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Some dummy text message from user A"
+                tools:text="Some dummy text message from user A"
                 android:textColor="@color/connect_message_sender_text_color"
                 android:textSize="14sp" />
 
@@ -48,10 +49,10 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvUserName"
+                    android:id="@+id/tvChatDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12:00 AM"
+                    tools:text="12:00 AM"
                     android:textColor="@color/connect_message_sender_text_color"
                     android:textSize="11sp" />
 
