- Update credentials table fields - Converted class to kotlin

--- a/app/res/layout/activity_personal_id_credential_details.xml
+++ b/app/res/layout/activity_personal_id_credential_details.xml
@@ -136,6 +136,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
