- Comments resolved - Added filteration and sorting logic

--- a/app/res/layout/activity_personal_id_credential.xml
+++ b/app/res/layout/activity_personal_id_credential.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/personal_id_no_credentials"
-                android:fontFamily="@font/nunito_sans"
+                android:fontFamily="@font/roboto_medium"
                 android:padding="10dp"
                 android:text="@string/no_credentials_currently_available"
                 android:textColor="@color/personal_id_no_credentials_txt"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@color/personal_id_earned_credentials_txt"
-                android:fontFamily="@font/work_sans"
+                android:fontFamily="@font/roboto_medium"
                 android:padding="10dp"
                 android:textColor="@color/personal_id_item_grey"
                 android:textSize="16sp"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@color/personal_id_earned_credentials_txt"
-                android:fontFamily="@font/work_sans"
+                android:fontFamily="@font/roboto_medium"
                 android:padding="10dp"
                 android:textColor="@color/personal_id_item_grey"
                 android:textSize="16sp"
