--- a/app/res/layout/activity_personal_id_credential_details.xml
+++ b/app/res/layout/activity_personal_id_credential_details.xml
@@ -22,7 +22,6 @@
             android:adjustViewBounds="true"
             android:padding="4dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_dummy_profile"
             app:layout_constraintEnd_toEndOf="@id/guideEnd20"
             app:layout_constraintStart_toStartOf="@id/guideStart20"
             app:layout_constraintTop_toTopOf="parent"
@@ -141,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/bg_hq_cred_8"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:paddingHorizontal="23dp"
             android:paddingVertical="8dp"
@@ -159,7 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:drawableEnd="@drawable/ic_share"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:text="@string/share_your_accomplishment_with_friends_and_family"
             android:textColor="@color/connect_blue_color"
             android:textSize="13sp"
@@ -181,7 +180,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:text="@string/learn_more"
             android:textColor="@color/connect_blue_color"
             android:textSize="13sp"
