--- a/app/res/layout/credential_share_view.xml
+++ b/app/res/layout/credential_share_view.xml
@@ -14,7 +14,7 @@
         android:layout_margin="4dp"
         android:background="@drawable/bg_circle_border"
         android:padding="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvNameButton"
+        app:layout_constraintBottom_toTopOf="@+id/tvUserName"
         app:layout_constraintEnd_toStartOf="@id/glStart40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/clBadge"
@@ -28,7 +28,7 @@
     </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvNameButton"
+        android:id="@+id/tvUserName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -68,7 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="11sp"
@@ -84,7 +84,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -100,7 +100,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:fontFamily="@font/nunito_sans"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="11sp"
@@ -146,7 +146,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="12dp"
-        android:fontFamily="@font/nunito_sans"
+        android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:textColor="@color/personal_id_no_credentials_txt"
         android:textSize="13sp"
