--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -90,6 +90,9 @@
                             android:layout_marginBottom="20dp"
                             android:indeterminateOnly="false"
                             android:progressDrawable="@drawable/progress_ring"
+                            app:strokeWidth="15"
+                            app:progressColor="@color/connect_aqua"
+                            app:progressBackgroundColor="@color/connect_blackist_dark_blue_color"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
