--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -193,7 +193,7 @@
     <color name="connect_grey">#9A9A9A</color>
     <color name="connect_divider_color">#E5E7EB</color>
     <color name="connect_background_color">#f7f9fa</color>
-    <color name="connect_aquva">#88BEE1</color>
+    <color name="connect_aqua">#88BEE1</color>
     <color name="connect_green">#16A085</color>
     <color name="connect_light_green">#E6F5E5</color>
     <color name="connect_red">#EA6944</color>
