--- a/app/res/menu/menu_connect.xml
+++ b/app/res/menu/menu_connect.xml
@@ -9,6 +9,7 @@
     <item
         android:id="@+id/action_credential"
         android:icon="@drawable/ic_credential"
+        android:visible="false"
         android:title="@string/credential"
         app:showAsAction="always" />
     <item
