- Re-designed as per new figma for work history - Removed previous items design,its item click,strings, PersonalIdCredentialDetailActivity activity and its resources

--- a/app/res/menu/menu_work_history.xml
+++ b/app/res/menu/menu_work_history.xml
@@ -6,4 +6,11 @@
         android:contentDescription="@string/cloud_sync"
         android:icon="@drawable/ic_cloud_sync"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/more"
+        android:title="@string/cloud_sync"
+        android:contentDescription="action"
+        android:icon="@drawable/ic_connect_action_overflow"
+        app:showAsAction="always"/>
 </menu>
