--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -221,6 +221,11 @@
     <color name="personal_id_earned_credentials_txt">#E9ECEF</color>
     <color name="personal_id_delivery_app">#FC5F36</color>
     <color name="bg_share_cred_card">#BEC6ED</color>
+    <color name="color_activity">#90A1B9</color>
+    <color name="white_30">#4DFFFFFF</color>
+    <color name="grey_pending">#F3F4F6</color>
+    <color name="yellow_pending">#C67E13</color>
+    <color name="yellow_pending_bg">#FFF4CD</color>
 
 
     <color name="ic_backup">#14006C</color>
