--- a/app/res/drawable/bg_pending_16.xml
+++ b/app/res/drawable/bg_pending_16.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/connect_message_large_icon_color" />
+        android:color="@color/yellow_pending_bg" />
 
-    <solid android:color="@color/connect_message_large_icon_color" />
+    <solid android:color="@color/yellow_pending_bg" />
 
     <padding
         android:left="1dp"
@@ -12,5 +12,5 @@
         android:bottom="1dp"
         android:top="1dp" />
 
-    <corners android:radius="8dp" />
+    <corners android:radius="16dp" />
 </shape>
