--- a/app/res/layout/activity_personal_id_credential.xml
+++ b/app/res/layout/activity_personal_id_credential.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.commcare.activities.connect.PersonalIdCredentialActivity">
+    android:background="@color/white">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_credentials"
+        android:layout_width="match_parent"
+        android:backgroundTint="@color/white"
+        android:layout_height="?actionBarSize"
+        android:background="@color/connect_background_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="fill"
+        app:tabIconTint="@color/tab_icon_selector"
+        app:tabIndicator="@drawable/ic_connect_pager_indicator"
+        app:tabIndicatorColor="@color/black"
+        app:tabInlineLabel="true"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextAppearance="@style/TabTextStyle"
+        app:tabTextColor="@color/connect_grey" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpCredentials"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_credentials" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvLearnMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_rounded_blue_70"
+        android:drawableEnd="@drawable/ic_connect_arrow_forward_20px"
+        android:drawablePadding="10dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
+        android:text="@string/learn_more_about_credentials"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:drawableTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
