-code rabbit comments

--- a/app/res/layout/left_hand_base_drawer.xml
+++ b/app/res/layout/left_hand_base_drawer.xml
@@ -18,7 +18,7 @@
             android:layout_height="0dp"
             android:background="@color/cc_brand_color"
             android:orientation="vertical"
-            android:visibility="visible"
+            android:visibility="gone"
             android:paddingTop="92dp"
             android:layout_weight="1">
             <ImageView
@@ -46,11 +46,11 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/signin_view"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@color/cc_brand_color"/>
 
         <include
