--- a/app/res/layout/nav_drawer_header.xml
+++ b/app/res/layout/nav_drawer_header.xml
@@ -63,7 +63,7 @@
                     android:id="@+id/manage_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/manage_profile"
+                    android:text="@string/left_navigation_menu_manage_profile"
                     android:textColor="@color/white"
                     android:paddingTop="4dp"
                     android:textSize="12sp"/>
