- Added manager to both rv

--- a/app/res/layout/fragment_earned_credential.xml
+++ b/app/res/layout/fragment_earned_credential.xml
@@ -32,6 +32,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="3"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         tools:listitem="@layout/item_earned_credential" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
