--- a/app/res/layout/fragment_pending_credential.xml
+++ b/app/res/layout/fragment_pending_credential.xml
@@ -15,6 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="3"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         android:layout_marginHorizontal="15dp"
         tools:listitem="@layout/item_pending_credential" />
 
