--- a/app/res/layout/item_earned_credential.xml
+++ b/app/res/layout/item_earned_credential.xml
@@ -72,7 +72,7 @@
             android:gravity="center"
             android:paddingHorizontal="15dp"
             android:text="3 Months of Activity"
-            android:textColor="@color/color_activity"
+            android:textColor="@color/personal_id_credential_earned_activity"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/ivRibbin"
             app:layout_constraintEnd_toEndOf="@id/ivRibbin"
@@ -114,7 +114,7 @@
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto_medium"
             android:text="Completed on 21/02/2024"
-            android:textColor="@color/white_30"
+            android:textColor="@color/personal_id_credential_earned_grey"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
