--- a/app/res/layout/item_pending_credential.xml
+++ b/app/res/layout/item_pending_credential.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:backgroundTint="@color/grey_pending"
-    app:cardBackgroundColor="@color/grey_pending"
+    android:backgroundTint="@color/personal_id_credential_grey_pending"
+    app:cardBackgroundColor="@color/personal_id_credential_grey_pending"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,11 +27,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@drawable/bg_pending_16"
+            android:background="@drawable/personal_id_credential_pending"
             android:paddingHorizontal="10dp"
             android:paddingVertical="2dp"
             android:text="@string/pending"
-            android:textColor="@color/yellow_pending"
+            android:textColor="@color/personal_id_credential_yellow_pending"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/ivPending"
