--- a/app/res/drawable/personal_id_credential_pending.xml
+++ b/app/res/drawable/personal_id_credential_pending.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/yellow_pending_bg" />
+        android:color="@color/personal_id_credential_yellow_pending_bg" />
 
-    <solid android:color="@color/yellow_pending_bg" />
+    <solid android:color="@color/personal_id_credential_yellow_pending_bg" />
 
     <padding
         android:left="1dp"
